kube/dev/spring.yaml
# Spring - App
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: spring
  name: spring
spec:
  replicas: 3
  selector:
    matchLabels:
      app: spring
  strategy: {}
  template:
    metadata:
      labels:
        app: spring
    spec:
      containers:
      - image: acrackintheice/expense-tracker-spring:0.0.1
        imagePullPolicy: "Always"
        name: spring
        ports:
        - containerPort: 8080
        resources: {}
      restartPolicy: Always
---
# Spring - Service
kind: Service
apiVersion: v1
metadata:
  name: spring
spec:
  type: ClusterIP
  selector:
    app: spring
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
